jenkins/ingresses.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ci-server
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - jenkins.vitalbeats.dev
      secretName: jenkins-tls
  rules:
    - host: jenkins.vitalbeats.dev
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
